--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <!--hero/jumbotron-->
         <section class="hero"> 
             <div>
-                
                 <!--Add form element-->
                 <form class="hero-form">
                 <h3>Get Started Today</h3>
@@ -105,9 +104,37 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <secton>
-            <h2> Meet The Trainers</h2>
-        </secton>
+        <secton id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <!--first trainer-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                <div class="trainer-bio text-left">
+                    <h3> Arron Stephens</h3>
+                    <h4> Speed / Strength</h4>
+                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatem vel accusantium odit unde asperiores recusandae? Esse commodi ipsum exercitationem ut repellat pariatur eum quisquam corporis iusto. Beatae, eaque ducimus.</p>
+                </div>
+            </article>
+            <!--second trainer-->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempora incidunt aut recusandae! Totam, facere sed. Officia, ut. Maxime pariatur nihil eum assumenda, sapiente aut sequi cupiditate magni quisquam aliquam?</p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+            </article>
+            <!--third trainer-->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempora incidunt aut recusandae! Totam, facere sed. Officia, ut. Maxime pariatur nihil eum assumenda, sapiente aut sequi cupiditate magni quisquam aliquam?</p>
+                </div>
+            </article>
+
+         </secton>
 
         <!--"reach out" section-->
         <section>
@@ -117,6 +144,7 @@
         <!-- footer -->
         <footer>
             <h2> ❤️ Made with love by Run Buddy.</h2>
+           
             <div>
                 <a href="#">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
