--- a/index.html
+++ b/index.html
@@ -137,15 +137,33 @@
          </secton>
 
         <!--"reach out" section-->
-        <section>
-            <h2> Reach Out </h2>
+        <section id="reach-out" class="contact-info">
+            <h2 class="section-title secondary-border"> Reach Out </h2>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13666.369085721442!2d-97.71340766698756!3d31.093266604205333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86454bdbc5dce419%3A0xc4aceff8a85e53cf!2s3401%20Beagle%20Ct%2C%20Killeen%2C%20TX%2076543!5e0!3m2!1sen!2sus!4v1601152929344!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
+            </div>
+                <div class="contact-info">
+                    <h3>Run Buddy</h3>
+                    <p>
+                        Any questions or concerns before signing up?  
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                    </p>
+                    <address>
+                        55 Main Street <br />
+                        Some Town, Ca <br />
+                        12345<br />
+                        P: 555.RUN.BUDZ (555.786.2839)<br />
+                        E: <a href="mailto:infor@runbuddy.io">infor@runbuddy.io</a>
+                    </address>
+                </div>
         </section>    
 
         <!-- footer -->
         <footer>
             <h2> ❤️ Made with love by Run Buddy.</h2>
-           
-            <div>
+           <div>
                 <a href="#">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
