--- a/index.html
+++ b/index.html
@@ -104,61 +104,69 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <secton id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
-            <!--first trainer-->
+        <section id="your-tainers" class="trainers">
+            <h2 class="section-title primary-border">Meet the Trainers</h2>
+            <!--Trainer 1-->
             <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio text-left">
-                    <h3> Arron Stephens</h3>
-                    <h4> Speed / Strength</h4>
-                    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptatem vel accusantium odit unde asperiores recusandae? Esse commodi ipsum exercitationem ut repellat pariatur eum quisquam corporis iusto. Beatae, eaque ducimus.</p>
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nobis qui mollitia esse laudantium officiis, amet perferendis adipisci eaque incidunt tempore deleniti quasi ad sed quam saepe doloremque sint iste!
+                    </p>
                 </div>
             </article>
-            <!--second trainer-->
+            <!--Second Trainer-->
             <article class="trainer">
                 <div class="trainer-bio text-right">
                     <h3>Joanna Gill</h3>
                     <h4>Endurance</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempora incidunt aut recusandae! Totam, facere sed. Officia, ut. Maxime pariatur nihil eum assumenda, sapiente aut sequi cupiditate magni quisquam aliquam?</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nobis qui mollitia esse laudantium officiis, amet perferendis adipisci eaque incidunt tempore deleniti quasi ad sed quam saepe doloremque sint iste!
+                    </p>
                 </div>
                 <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
             </article>
-            <!--third trainer-->
+            <!--Third Trainer-->
             <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
                 <div class="trainer-bio text-left">
                     <h3>Harry "the Headband" Smith</h3>
-                    <h4>Endurance</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempora incidunt aut recusandae! Totam, facere sed. Officia, ut. Maxime pariatur nihil eum assumenda, sapiente aut sequi cupiditate magni quisquam aliquam?</p>
+                    <h4>Speed / Strength</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga nobis qui mollitia esse laudantium officiis, amet perferendis adipisci eaque incidunt tempore deleniti quasi ad sed quam saepe doloremque sint iste!
+                    </p>
                 </div>
             </article>
-
-         </secton>
-
+        </section>
         <!--"reach out" section-->
-        <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border"> Reach Out </h2>
+        <section>
+            <h2>Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13666.369085721442!2d-97.71340766698756!3d31.093266604205333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86454bdbc5dce419%3A0xc4aceff8a85e53cf!2s3401%20Beagle%20Ct%2C%20Killeen%2C%20TX%2076543!5e0!3m2!1sen!2sus!4v1601152929344!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen>
-                </iframe>
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13666.369085721442!2d-97.7134076669876!3d31.093266604205333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86454bdbc5dce419%3A0xc4aceff8a85e53cf!2s3401%20Beagle%20Ct%2C%20Killeen%2C%20TX%2076543!5e0!3m2!1sen!2sus!4v1601174518060!5m2!1sen!2sus" 
+                width="600" 
+                height="450" 
+                frameborder="0" 
+                style="border:0;" 
+                allowfullscreen="" 
+                aria-hidden="false" 
+                tabindex="0">
+            </iframe>
             </div>
             <div>
                 <h3>Run Buddy</h3>
-                    <p>
-                        Any questions or concerns before signing up?  
+                <p>Any questions or concerns befoe signing up?
                     <br />
                     Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
-                    55 Main Street <br />
-                    Some Town, CA <br />
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
                     12345<br />
-                    P: 555.RUN.BUDZ (555.786.2839)<br />
-                    E: <a href="mailto:info@runbuddy.io">infor@runbuddy.io</a>
-                    </address>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>   
+                </address>
             </div>
-        </section>    
+        </section>  
 
         <!-- footer -->
         <footer>
