--- a/index.html
+++ b/index.html
@@ -138,29 +138,26 @@
             </article>
         </section>
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
-            <div class="contact-info">
+        <section id="reach out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+            <br/>
+            <div>
                 <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13666.369085721442!2d-97.7134076669876!3d31.093266604205333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86454bdbc5dce419%3A0xc4aceff8a85e53cf!2s3401%20Beagle%20Ct%2C%20Killeen%2C%20TX%2076543!5e0!3m2!1sen!2sus!4v1601174518060!5m2!1sen!2sus" 
-                width="600" 
-                height="450" 
                 frameborder="0" 
                 style="border:0;" 
-                allowfullscreen="" 
-                aria-hidden="false" 
-                tabindex="0">
-            </iframe>
+                allowfullscreen="" >
+                </iframe>
             </div>
             <div>
                 <h3>Run Buddy</h3>
-                <p>Any questions or concerns befoe signing up?
+                <p>Any questions or concerns before signing up?
                     <br />
                     Let us know and we'll be happy to talk to you!
                 </p>
                 <address>
                     55 Main Street <br/>
-                    Some Town, Ca <br/>
+                    Some Town, CA <br/>
                     12345<br />
                     P: 555.RUN.BUDZ (555.786.2839)<br/>
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>   
