finished product with update privacy page and added secondary style sheet

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section id="your-tainers" class="trainers">
+        <section id="your-trainers" class="trainers">
             <h2 class="section-title primary-border">Meet the Trainers</h2>
             <!--Trainer 1-->
             <article class="trainer">
@@ -138,7 +138,7 @@
             </article>
         </section>
         <!--"reach out" section-->
-        <section id="reach out" class="contact">
+        <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
             <br/>
             <div>
@@ -169,7 +169,7 @@
         <footer>
             <h2> ❤️ Made with love by Run Buddy.</h2>
            <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
