--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- navigation -->
         <header>
             <h1 > 
-                <a href="/"></a>RUN BUDDY </a>
+                <a href="/">RUN BUDDY</a>
             </h1>
               <nav>
                 <!--Unordered list element-->
@@ -100,7 +100,6 @@
                 <h3> Step 4: <span>See Results.</span> </h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
-
         </section>
 
         <!--"meet the trainers" section-->
