--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
 
         <!--hero/jumbotron-->
-        <section class="hero"> 
+        <section class="hero-cta"> 
             <div>
                 <h2> Start Building Habits.</h2>
                 <p>seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
